Split csv into definitions and descriptions to reduce csv complexity